--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title></title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="Diwank's shiny home page!">
+	<meta name="author" content="Diwank Singh Tomer">
 
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<link rel="stylesheet" href="css/style.css">
-	<link href="http://fonts.googleapis.com/css?family=" rel="stylesheet" />
+	<link href="http://fonts.googleapis.com/css?family=Alfa+Slab+One|Patua+One" rel="stylesheet" />
 
-	<script src="js/libs/modernizr-2.0.6.min.js"></script>
+	<script src="js/modernizr-2.0.6.min.js"></script>
 	
 	<script type="text/javascript">
 
@@ -38,62 +38,39 @@
 <div id="impress" class="impress-not-supported">
 
     <div class="fallback-message">
-        <p>Your browser <b>doesn't support the features required</b> by impress.js, so you are presented with a simplified version of this presentation.</p>
-        <p>For the best experience please use the latest <b>Chrome</b> or <b>Safari</b> browser. Firefox 10 and Internet Explorer 10 <i>should</i> also handle it.</p>
+        <p>This site is built using <em>space-age technology.</em>
+		<br/>Install Chrome or wait for IE15.
+		</p>
+		<p>Your fault if it ain't working.
+		<br/><strong>Haha hahaa!</strong>
+		</p>
     </div>
 
-    <div class="step slide" data-x="-1000" data-y="-1500">
-        <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>
-    </div>
-
-    <div class="step slide" data-x="0" data-y="-1500">
-        <q>Don't you think that presentations given <strong>in modern browsers</strong> shouldn't <strong>copy the limits</strong> of 'classic' slide decks?</q>
-    </div>
-
-    <div class="step slide" data-x="1000" data-y="-1500">
-        <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your talk?</q>
+    <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
     </div>
 
     <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
-        <span class="try">then you should try</span>
-        <h1>impress.js<sup>*</sup></h1>
-        <span class="footnote"><sup>*</sup> no rhyme intended</span>
-    </div>
-
-    <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
-        <p>It's a <strong>presentation tool</strong> <br/>
-        inspired by the idea behind <a href="http://prezi.com">prezi.com</a> <br/>
-        and based on the <strong>power of CSS3 transforms and transitions</strong> in modern browsers.</p>
-    </div>
-
-    <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
-        <p>visualize your <b>big</b> <span class="thoughts">thoughts</span></p>
-    </div>
-
-    <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-600" data-rotate="300" data-scale="1">
-        <p>and <b>tiny</b> ideas</p>
-    </div>
-
-    <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
-        <p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b class="scaling">scaling</b> them on an infinite canvas</p>
+        <h1>diwank</h1>
+        <span class="try">singh &#8226; tomer</span>
     </div>
 
     <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-        <p>the only <b>limit</b> is your <b class="imagination">imagination</b></p>
+        <p><a>blag</a>|<a>poet</a>|<a>code</a>|<a>social</a></p>
     </div>
 
-    <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
-        <p>want to know more?</p>
-        <q><a href="http://github.com/bartaz/impress.js">use the source</a>, Luke!</q>
+    <div id="infinity" class="step" data-x="2825" data-y="2325" data-z="-600" data-rotate="300" data-scale="1">
+        <p>Poet. Dreamer.
+Thinker. Creator.
+Entrepreneur. Athlete.  
+Fighter. Lover.
+Photographer. Dog owner.
+Programmer. Designer.
+Nature lover. Traveller.
+Idea Architect. Leader.</p>
     </div>
 
-    <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
-        <p>one more thing...</p>
-    </div>
-
-    <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
-        <p><span class="have">have</span> <span class="you">you</span> <span class="noticed">noticed</span> <span class="its">it's</span> <span class="in">in</span> <b>3D<sup>*</sup></b>?</p>
-        <span class="footnote">* beat that, prezi ;)</span>
+    <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
+        <p>possibilities</p>
     </div>
 
     <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
