@creatorrr: Putting in lorem ipsum. Now changing it to my name. ;)

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title></title>
+	<title>diwank &#8226; singh</title>
 	<meta name="description" content="Diwank's shiny home page!">
 	<meta name="author" content="Diwank Singh Tomer">
 
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<link rel="stylesheet" href="css/style.css">
-	<link href="http://fonts.googleapis.com/css?family=Alfa+Slab+One|Patua+One" rel="stylesheet" />
+	<link href="http://fonts.googleapis.com/css?family=Alfa+Slab+One|Passion+One|Chelsea+Market" rel="stylesheet" />
 
 	<script src="js/modernizr-2.0.6.min.js"></script>
 	
@@ -46,34 +46,20 @@
 		</p>
     </div>
 
-    <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
+    <div id="overview" class="step" data-x="0" data-y="0" data-scale="10">
     </div>
 
-    <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
+    <div id="name" class="step" data-x="0" data-y="0" data-z="400" data-scale="8">
         <h1>diwank</h1>
-        <span class="try">singh &#8226; tomer</span>
+        <h2 class="title">singh &#8226; tomer</h2>
+    </div>
+    
+    <div id="links" class="step" data-x="0" data-y="0" data-z="600" data-scale="6">
+    	<p><a href='http://blag.diwank.name'>blag</a>|<a href='http://poet.diwank.name'>poet</a>|<a href='http://singh.diwank.name/github'>code</a>|<a href='http://singh.diwank.name/+'>social</a>|<a href='http://singh.diwank.name/+'>talk</a></p>
     </div>
 
-    <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-        <p><a>blag</a>|<a>poet</a>|<a>code</a>|<a>social</a></p>
-    </div>
 
-    <div id="infinity" class="step" data-x="2825" data-y="2325" data-z="-600" data-rotate="300" data-scale="1">
-        <p>Poet. Dreamer.
-Thinker. Creator.
-Entrepreneur. Athlete.  
-Fighter. Lover.
-Photographer. Dog owner.
-Programmer. Designer.
-Nature lover. Traveller.
-Idea Architect. Leader.</p>
-    </div>
-
-    <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
-        <p>possibilities</p>
-    </div>
-
-    <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
+    <div id="overview" class="step" data-x="0" data-y="0" data-scale="10">
     </div>
 
 </div>
