--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     
     <div id="links" class="step" data-x="0" data-y="0" data-z="600" data-scale="6">
-    	<p><a href='http://blag.diwank.name'>blag</a>|<a href='http://poet.diwank.name'>poet</a>|<a href='http://singh.diwank.name/github'>code</a>|<a href='http://singh.diwank.name/+'>social</a>|<a href='http://singh.diwank.name/+'>talk</a></p>
+    	<p><a href='http://blag.diwank.name'>blag</a>|<a href='http://poet.diwank.name'>poet</a>|<a href='http://singh.diwank.name/github'>code</a>|<a href='http://singh.diwank.name/plus'>social</a>|<a href='http://singh.diwank.name/plus'>talk</a></p>
     </div>
 
 
