Changed favicon, bg and font
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <!-- PROD -->
-        <link rel="stylesheet" href="css/min.css">
-
-        <!-- DEV
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/socio.css">
         <link rel="stylesheet" href="css/main.css">
-        -->
 
         <!-- Google Fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     </head>
     <body class="main">
         <!--[if lt IE 8]>
@@ -85,7 +80,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
         <script type="text/javascript" src="js/vendor/greensock/TweenMax.min.js"></script>
         <script src="js/vendor/jquery.superscrollorama.js"></script>
-        
+
         <!-- Author javascript. -->
         <script src="js/main.js"></script>
 
