--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/socio.css">
         <link rel="stylesheet" href="css/main.css">
+        <!--
         <link rel="stylesheet" href="css/supersized.css">
+        -->
 
         <!-- Google Fonts
         <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -40,16 +42,18 @@
             </div>
         </div>
 
-        <!-- Vendor javascript. -->
+        <!-- Vendor javascript.
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
 
         <script src="js/vendor/jquery.easing.min.js"></script>
         <script src="js/vendor/supersized.3.2.7.min.js"></script>
         <script src="js/vendor/supersized.shutter.min.js"></script>
+        -->
 
-        <!-- Author javascript. -->
+        <!-- Author javascript.
         <script src="js/main.js"></script>
+        -->
 
         <!-- Google Analytics. -->
 	    <script type="text/javascript">
