--- a/index.html
+++ b/index.html
@@ -31,29 +31,45 @@
         <![endif]-->
 
         <div id="content-wrapper">
-            <h1 id="header"> diwank singh </h1>
-            <div id="social">
+          <header>
+            <section class="headshot">
+              <img class="circular" src="/img/portrait.jpg"/>
+            </section>
+            <section>
+              <h1> diwank singh </h1>
+            </section>
+          </header>
+          <article>
+            <section>
+              <p>I am an entreprenuer living in <a href="http://www.sanfrancisco.travel/">San Francisco.</a> I love hiking and eating bananas.
+              <br/> Sometimes, I write <a href="http://rafiki.io">essays</a> or <a href="http://poet.diwank.name">poems.</a></p>
+              <p>These days I am working on <a href="http://signup.tranqlapp.com">helping people feel better.</a></p>
+              <p>Feel free to <a href="http://ohours.org/diwank">get in touch.</a></p>
+            </section>
+          </article>
+
+          <footer>
+            <div class="social">
                 <a class="icon-facebook-rect-2" href="http://facebook.com/diwank.singh" target="_blank">f</a>
-                <a class="icon-twitter-bird-1" href="http://twitter.com/meetdagod" target="_blank">t</a>
-                <a class="icon-googleplus-rect-1" href="http://singh.diwank.name/plus" target="_blank"> +</a>
-                <a class="icon-linkedin-rect-1" href="http://linkedin.com/in/diwank" target="_blank"> i</a>
+                <a class="icon-twitter-bird-1" href="http://twitter.com/diwanksingh" target="_blank">t</a>
                 <a class="icon-github-1" href="http://github.com/creatorrr" target="_blank">g</a>
-                <a class="icon-mail" href="mailto:singh@diwank.name" target="_blank"> ✉</a>
             </div>
+          </footer>
         </div>
 
-        <!-- Vendor javascript.
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+        <!-- Vendor javascript. -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
 
-        <script src="js/vendor/jquery.easing.min.js"></script>
-        <script src="js/vendor/supersized.3.2.7.min.js"></script>
-        <script src="js/vendor/supersized.shutter.min.js"></script>
-        -->
+        <script src="js/vendor/filtrr/filtrr2.js"></script>
+        <script src="js/vendor/filtrr/layers.js"></script>
+        <script src="js/vendor/filtrr/effects.js"></script>
+        <script src="js/vendor/filtrr/events.js"></script>
+        <script src="js/vendor/filtrr/util.js"></script>
 
-        <!-- Author javascript.
+
+        <!-- Author javascript. -->
         <script src="js/main.js"></script>
-        -->
 
         <!-- Google Analytics. -->
 	    <script type="text/javascript">
