--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="content-wrapper">
           <header>
             <section class="headshot">
-              <img class="circular" src="/img/portrait.jpg"/>
+              <img class="circular" src="/img/portrait-sepia.png"/>
             </section>
             <section>
               <h1> diwank singh </h1>
@@ -57,7 +57,7 @@
           </footer>
         </div>
 
-        <!-- Vendor javascript. -->
+        <!-- Vendor javascript.
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
 
@@ -66,10 +66,11 @@
         <script src="js/vendor/filtrr/effects.js"></script>
         <script src="js/vendor/filtrr/events.js"></script>
         <script src="js/vendor/filtrr/util.js"></script>
+        -->
 
-
-        <!-- Author javascript. -->
+        <!-- Author javascript.
         <script src="js/main.js"></script>
+        -->
 
         <!-- Google Analytics. -->
 	    <script type="text/javascript">
