--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Diwank Singh</title>
+        <title>diwank singh</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -43,7 +43,7 @@
             <section>
               <p>I am an entreprenuer living in <a href="http://www.sanfrancisco.travel/">San Francisco.</a> I love hiking and eating bananas.
               <br/> Sometimes, I write <a href="http://rafiki.io">essays</a> or <a href="http://poet.diwank.name">poems.</a></p>
-              <p>These days I am working on <a href="http://signup.tranqlapp.com">helping people feel better.</a></p>
+              <p>These days I am working on helping people <a href="http://signup.tranqlapp.com">feel better.</a></p>
               <p>Feel free to <a href="http://ohours.org/diwank">get in touch.</a></p>
             </section>
           </article>
