Added logo and flip
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
 
         <div id="content-wrapper">
           <header>
-            <section class="headshot">
-              <img class="circular" src="/img/portrait-sepia.png"/>
+            <section id="headshot" class="circular thick-border">
+              <div id="card">
+                <div class="front face">
+                    <img src="/img/portrait-sepia.png" class="circular">
+                </div>
+                <div class="back face">
+                    <img src="/img/pics/logo.jpg" class="circular">
+                </div>
+               </div>
             </section>
+
             <section>
               <h1> diwank singh </h1>
             </section>
