--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/socio.css">
         <link rel="stylesheet" href="css/main.css">
-        <!--
-        <link rel="stylesheet" href="css/supersized.css">
-        -->
-
-        <!-- Google Fonts
-        <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-        -->
 
         <!-- Typekit -->
         <script type="text/javascript" src="//use.typekit.net/fqe2xlq.js"></script>
@@ -38,7 +31,7 @@
                     <img src="/img/portrait-sepia.png" class="circular">
                 </div>
                 <div class="back face">
-                    <img src="/img/pics/logo.jpg" class="circular">
+                    <img src="/img/logo.jpg" class="circular">
                 </div>
                </div>
             </section>
@@ -68,16 +61,6 @@
         <!-- Vendor javascript.
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
-
-        <script src="js/vendor/filtrr/filtrr2.js"></script>
-        <script src="js/vendor/filtrr/layers.js"></script>
-        <script src="js/vendor/filtrr/effects.js"></script>
-        <script src="js/vendor/filtrr/events.js"></script>
-        <script src="js/vendor/filtrr/util.js"></script>
-        -->
-
-        <!-- Author javascript.
-        <script src="js/main.js"></script>
         -->
 
         <!-- Google Analytics. -->
