--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           </header>
           <article>
             <section>
-              <p>I am an entreprenuer living in <a href="http://www.tripadvisor.com/Tourism-g32919-Portola_Valley_California-Vacations.html">Portola Valley.</a> I love hiking and eating bananas.
+              <p>I am an entreprenuer living in <a href="http://www.incredibleindia.org/en/">India.</a> I love hiking and eating bananas.
               <br/> Sometimes, I write <a href="http://rafiki.io">essays</a> or <a href="http://poet.diwank.name">poems.</a></p>
-              <p>These days I am working on helping people <a href="http://signup.tranqlapp.com">feel better.</a></p>
+              <p>These days I am working on helping automate <a href="http://rukea.io">financial services.</a></p>
               <p>Feel free to <a href="http://ohours.org/diwank">get in touch.</a></p>
             </section>
           </article>
