--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <section>
               <p>I am an entreprenuer living in <a href="http://www.incredibleindia.org/en/">India.</a> I love hiking and eating bananas.
               <br/> Sometimes, I write <a href="http://rafiki.io">essays</a> or <a href="http://poet.diwank.name">poems.</a></p>
-              <p>These days I am working on helping automate <a href="http://rukea.io">financial services.</a></p>
+              
+              <p>These days I am working on automating the <a href="http://hornok.co">heavy commmercial industry.</a></p>
               <p>Feel free to <a href="http://ohours.org/diwank">get in touch.</a></p>
             </section>
           </article>
