--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
           </header>
           <article>
             <section>
-              <p>I am an entreprenuer living in <a href="http://www.incredibleindia.org/en/">India.</a> I love hiking and eating bananas.
+              <p>I am an entreprenuer living in <a href="http://www.incredibleindia.org">India.</a> I love hiking and eating bananas.
               <br/> Sometimes, I write <a href="http://rafiki.io">essays</a> or <a href="http://poet.diwank.name">poems.</a></p>
               
               <p>These days I am working on automating the <a href="http://hornok.co">heavy commmercial industry.</a></p>
-              <p>Feel free to <a href="http://ohours.org/diwank">get in touch.</a></p>
+              <p>Feel free to <a href="mailto:singh@diwank.name">get in touch.</a></p>
             </section>
           </article>
 
