--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <a class="icon-twitter-bird-1" href="http://twitter.com/diwanksingh" target="_blank">t</a>
                 <a class="icon-github-1" href="http://github.com/creatorrr" target="_blank">g</a>
             </div>
+		<div class="rc-scout"></div>
           </footer>
         </div>
 
@@ -79,5 +80,8 @@
 	      })();
 
 	    </script>
+	    
+	<!-- RC Scout -->
+	<script async defer src="https://www.recurse-scout.com/loader.js?t=e043ae5c28db7d7ab8439a1763c96d55"></script>
     </body>
 </html>
