--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
           <article>
             <section>
               <p>I am an entreprenuer living in <a href="http://www.incredibleindia.org">India.</a> I love hiking and eating bananas.
-              <br/> Sometimes, I write <a href="http://rafiki.io">essays</a> or <a href="http://poet.diwank.name">poems.</a></p>
+              <br/> Sometimes, I write <a href="http://blog.diwank.name">essays</a> or <a href="http://poet.diwank.name">poems.</a></p>
               
-              <p>These days I am working on automating the <a href="http://hornok.co">heavy commmercial industry.</a></p>
+              <p>
+		      These days I am studying Physics and Philosophy at <a href="http://www.columbia.edu/">Columbia University</a> in <a href="https://www.lonelyplanet.com/usa/new-york-city"> New York</a>.</p>
               <p>Feel free to <a href="mailto:singh@diwank.name">get in touch.</a></p>
             </section>
           </article>
