--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </header>
           <article>
             <section>
-              <p>I am an entreprenuer living in <a href="http://www.incredibleindia.org">India.</a> I love hiking and eating bananas.
+              <p>I am an entreprenuer from <a href="http://www.incredibleindia.org">India.</a> I love hiking and eating bananas.
               <br/> Sometimes, I write <a href="http://blog.diwank.name">essays</a> or <a href="http://poet.diwank.name">poems.</a></p>
               
               <p>
