--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <section>
               <p>I am an entreprenuer from <a href="http://www.incredibleindia.org">India.</a> I love hiking and eating bananas.
               <br/> Sometimes, I write <a href="http://blog.diwank.name">essays</a> or <a href="http://poet.diwank.name">poems.</a></p>
-              
+              <p> These days, I am working on <a href="https://kea.ai"> automating the business phone </a>. </p>
               <p>
-		      These days I am studying Physics and Philosophy at <a href="http://www.columbia.edu/">Columbia University</a> in <a href="https://www.lonelyplanet.com/usa/new-york-city"> New York</a>.</p>
+		       I used to study Physics and Philosophy at <a href="http://www.columbia.edu/">Columbia University</a> in <a href="https://www.lonelyplanet.com/usa/new-york-city"> New York</a>.</p>
               <p>Feel free to <a href="mailto:singh@diwank.name">get in touch.</a></p>
             </section>
           </article>
