--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <section id="headshot" class="circular thick-border">
               <div id="card">
                 <div class="front face">
-                    <img src="/img/portrait-sepia.png" class="circular">
+                    <img src="/img/logo.jpg" class="circular">
                 </div>
                 <div class="back face">
                     <img src="/img/logo.jpg" class="circular">
