--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <section id="headshot" class="circular thick-border">
               <div id="card">
                 <div class="front face">
-                    <img src="/img/logo.jpg" class="circular">
+                    <img src="/img/me.jpeg" class="circular">
                 </div>
                 <div class="back face">
                     <img src="/img/logo.jpg" class="circular">
@@ -42,20 +42,26 @@
           </header>
           <article>
             <section>
-              <p>I am an entreprenuer from <a href="http://www.incredibleindia.org">India.</a> I love hiking and eating bananas.
-              <br/> Sometimes, I write <a href="http://blog.diwank.name">essays</a> or <a href="http://poet.diwank.name">poems.</a></p>
-              <p> These days, I am working on <a href="https://mauna.ai"> making it easier for folks to create conversational interfaces </a>. </p>
+              <p>I am an AI researcher+entrepreneur from <a href="http://www.incredibleindia.org">India.</a> My mission is to understand how human intelligence works and then use it to build a better future.
+                <br/> These days, I am exploring <a href="https://huggingface.co/diwank"> foundational models' potential in understanding natural language </a>.
+		      
+	      </p>
+		    
+              <p> In my spare time, I love to play with my dog, run <a href="https://api.whatsapp.com/send?phone=918130287910&text=Saw%20your%20website.%20Would%20love%20to%20chat%20/%20join%20that%20poetry%20club%20of%20yours.%20:)">a poetry club</a>, and, sometimes even, write <a href="http://poet.diwank.name">poems.</a> </p>
               <p>
-		       I used to study Physics and Philosophy at <a href="http://www.columbia.edu/">Columbia University</a> in <a href="https://www.lonelyplanet.com/usa/new-york-city"> New York</a>.</p>
-              <p>Feel free to <a href="mailto:singh@diwank.name">get in touch.</a></p>
+		      I studied Physics and Philosophy at <a href="http://www.columbia.edu/">Columbia University</a> in <a href="https://www.lonelyplanet.com/usa/new-york-city"> New York</a>.
+		      <br /> I was also a <a href="https://www.deccanherald.com/content/331712/two-indians-among-20-20.html"> 2013 </a> <a href="http://thielfellowship.org/"> Thiel Fellow</a>.
+		      <br /> Fun fact: <i> BusinessInsider </i> named me one of <a href="https://www.businessinsider.in/tech/the-8-hottest-teenage-startup-founders-in-the-world-right-now/slidelist/23075471.cms">8 hottest entreprenuers in tech</a> 
+		    </p>
+              <p>Feel free to <a href="mailto:singh@diwank.name">get in touch</a> or take a look at my <a href="/resume.pdf">resume</a>.</p>
             </section>
           </article>
 
           <footer>
             <div class="social">
-                <a class="icon-facebook-rect-2" href="http://facebook.com/diwank.singh" target="_blank">f</a>
-                <a class="icon-twitter-bird-1" href="http://twitter.com/diwanksingh" target="_blank">t</a>
-                <a class="icon-github-1" href="http://github.com/creatorrr" target="_blank">g</a>
+                <a class="icon-facebook-rect-2" href="https://facebook.com/diwank.singh" target="_blank">f</a>
+                <a class="icon-linkedin-1" href="https://linkedin.com/in/diwank-tomer" target="_blank">t</a>
+                <a class="icon-github-1" href="https://github.com/creatorrr" target="_blank">g</a>
             </div>
 		<div class="rc-scout"></div>
           </footer>
